JumpScript/tests/baselines/reference/YieldExpression12_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression12_es6.jump(3,6): error TS1163: A 'yield' expression is only allowed in a generator body.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression12_es6.jump (1 errors) ====
    class C {
      constructor() {
         yield foo
         ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
      }
    }